Rectangle drawing update, fixed height adjustment
The rectangle renderer now honors the fillColor parameter. ChartBase now
has a setHeight() method that actually adjusts the size of the chart's
SVG.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A sequence alignment visualization tool / library.",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
+  "prepublish": "tsc",
   "scripts": {
     "test": "test.sh"
   },
