--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "CommonJS",
     "sourceMap": true,
     "target": "es6"
   },
