--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "sourceMap": true,
     "target": "es6"
   },
-  "compileOnSave": true
+  "compileOnSave": true,
+  "exclude": ["dist", "node_modules", "examples"]
 }
