--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.161",
+    "@types/puppeteer": "^3.0.2",
+    "puppeteer": "^5.3.1",
     "typescript": "^3.8.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
