--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "target": "es6"
   },
   "compileOnSave": true,
-  "exclude": ["dist", "node_modules", "examples"]
+  "exclude": ["dist", "node_modules", "examples", "automation"]
 }
