--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,11 +28,19 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: tests
         run: |
-          cd $GITHUB_WORKSPACE/tests
+          cd $GITHUB_WORKSPACE
+          echo 'installing npm packages...'
+          npm i
+          echo 'building soda...'
+          make build
+          cd tests/
           echo 'installing npm packages...'
           npm i
           cd test-apps/
+          echo 'building test apps...'
           make build
+          echo 'serving test apps...'
           python3 -m http.server -b localhost 8080 &
           sleep 5
+          echo 'running tests...'
           python3 ../scripts/run-tests.py
