--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "homepage": "https://github.com/TravisWheelerLab/SODA#readme",
   "dependencies": {
+    "@gmod/gff": "^1.1.2",
     "d3": "^5.15.0",
     "lodash": "^4.17.20"
   },
