--- a/examples/package.json
+++ b/examples/package.json
@@ -12,6 +12,7 @@
     "@traviswheelerlab/soda": "file:.."
   },
   "devDependencies": {
+    "source-map-loader": "^1.0.0",
     "typescript": "^3.8.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
