Vertical axis on line plot is mostly working

--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,8 @@
   "author": "Jack Roddy",
   "license": "ISC",
   "dependencies": {
-    "@traviswheelerlab/soda": "file:.."
+    "@traviswheelerlab/soda": "file:..",
+    "source-map-loader": "^1.0.0"
   },
   "devDependencies": {
     "source-map-loader": "^1.0.0",
