--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "target": "es6"
   },
   "compileOnSave": true,
-  "exclude": ["dist", "node_modules", "examples",
-    "tests"
+  "exclude": ["dist",
+        "node_modules",
+        "examples",
+        "docs",
+        "tests"
   ]
 }
