--- a/examples/package.json
+++ b/examples/package.json
@@ -9,13 +9,12 @@
   "author": "Jack Roddy",
   "license": "ISC",
   "dependencies": {
-    "@traviswheelerlab/soda": "file:..",
+    "@traviswheelerlab/soda": "^1.3.0",
     "d3": "^6.6.0",
     "source-map-loader": "^1.0.0"
   },
   "devDependencies": {
-    "source-map-loader": "^1.0.0",
-    "typescript": "^3.8.0",
+    "typescript": "^4.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
