--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   ],
   "homepage": "https://github.com/TravisWheelerLab/SODA#readme",
   "dependencies": {
-    "@gmod/bed": "^2.0.5",
-    "@gmod/gff": "^1.1.2",
-    "d3": "^5.15.0",
-    "lodash": "^4.17.20"
+    "@gmod/bed": "2.0.5",
+    "@gmod/gff": "1.1.2",
+    "d3": "5.15.0",
+    "lodash": "4.17.20"
   },
   "devDependencies": {
-    "@types/d3": "^5.7.2",
-    "@types/lodash": "^4.14.161",
-    "typescript": "^4.1.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "@types/d3": "5.7.2",
+    "@types/lodash": "4.14.161",
+    "typescript": "4.1.3",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11"
   },
   "author": "Jack Roddy"
 }
