--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@traviswheelerlab/soda",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.0",
   "description": "A library for visualizing biological annotation.",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
