--- a/examples/package.json
+++ b/examples/package.json
@@ -9,11 +9,12 @@
   "author": "Jack Roddy",
   "license": "ISC",
   "dependencies": {
-    "@traviswheelerlab/soda": "^1.3.0",
-    "d3": "^6.6.0",
+    "@traviswheelerlab/soda": "file:..",
+    "d3": "^5.15.0",
     "source-map-loader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/d3": "5.7.2",
     "typescript": "^4.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
