--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@gmod/bed": "^2.0.5",
     "@gmod/gff": "^1.1.2",
     "d3": "^5.15.0",
+    "d3-radial-axis": "^1.6.5",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
